// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Close click cancel 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="modal-container"
        role="dialog"
      >
        <div
          class="modal"
          role="dialog"
        >
          <div
            class="modal-header"
          >
            <span
              class="title"
            >
              Title
            </span>
            <div
              class="cancel"
              role="button"
              tabindex="0"
            >
              <svg
                height="20"
                width="20"
              >
                cancel.svg
              </svg>
              <span>
                CANCEL
              </span>
            </div>
          </div>
          <div
            class="modal-body"
          >
            <span>
              Children
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="modal-container"
      role="dialog"
    >
      <div
        class="modal"
        role="dialog"
      >
        <div
          class="modal-header"
        >
          <span
            class="title"
          >
            Title
          </span>
          <div
            class="cancel"
            role="button"
            tabindex="0"
          >
            <svg
              height="20"
              width="20"
            >
              cancel.svg
            </svg>
            <span>
              CANCEL
            </span>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <span>
            Children
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Modal Props isClose 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="modal-container closeModal"
        role="dialog"
      >
        <div
          class="modal"
          role="dialog"
        >
          <div
            class="modal-header"
          >
            <span
              class="title"
            >
              Title
            </span>
            <div
              class="cancel"
              role="button"
              tabindex="0"
            >
              <svg
                height="20"
                width="20"
              >
                cancel.svg
              </svg>
              <span>
                CANCEL
              </span>
            </div>
          </div>
          <div
            class="modal-body"
          >
            <span>
              Children
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="modal-container closeModal"
      role="dialog"
    >
      <div
        class="modal"
        role="dialog"
      >
        <div
          class="modal-header"
        >
          <span
            class="title"
          >
            Title
          </span>
          <div
            class="cancel"
            role="button"
            tabindex="0"
          >
            <svg
              height="20"
              width="20"
            >
              cancel.svg
            </svg>
            <span>
              CANCEL
            </span>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <span>
            Children
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Modal Props valid 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="modal-container"
        role="dialog"
      >
        <div
          class="modal"
          role="dialog"
        >
          <div
            class="modal-header"
          >
            <span
              class="title"
            >
              Title
            </span>
            <div
              class="cancel"
              role="button"
              tabindex="0"
            >
              <svg
                height="20"
                width="20"
              >
                cancel.svg
              </svg>
              <span>
                CANCEL
              </span>
            </div>
          </div>
          <div
            class="modal-body"
          >
            <span>
              Children
            </span>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="modal-container"
      role="dialog"
    >
      <div
        class="modal"
        role="dialog"
      >
        <div
          class="modal-header"
        >
          <span
            class="title"
          >
            Title
          </span>
          <div
            class="cancel"
            role="button"
            tabindex="0"
          >
            <svg
              height="20"
              width="20"
            >
              cancel.svg
            </svg>
            <span>
              CANCEL
            </span>
          </div>
        </div>
        <div
          class="modal-body"
        >
          <span>
            Children
          </span>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
